<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="50dp"
    tools:context="com.example.fatafat.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:gravity="center"
        android:fontFamily="@font/logo"
        android:text="FataFat"
        android:textAllCaps="true"
        android:textColor="@color/text"
        android:textSize="62sp"
        android:textStyle="bold" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <EditText
        android:id="@+id/etLoginUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@android:color/white"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:padding="10dp" />


    <EditText
        android:id="@+id/etLoginPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@android:color/white"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/fg"
        android:text="@string/sign_in"
        android:textColor="@android:color/white" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/not_having_account"
        android:textColor="#ccc" />

    <Button
        android:id="@+id/btnLoginRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="#aaa"
        android:text="@string/register"
        android:textColor="@android:color/white" />


</LinearLayout>